--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Travel with Security - Simulazione App Mobile</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -10,31 +10,50 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0f2f5;
+            background-color: #ffffff; /* Sfondo bianco per un look da app */
+            margin: 0;
+            padding: 0;
+            /* Forza l'altezza al 100% per un'esperienza full-screen */
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden; /* Evita lo scroll sul body */
         }
+        /* Stili per il Mockup/Mobile: Full Screen di default */
         .app-container {
-            max-width: 420px;
-            height: 850px;
-            margin: 2rem auto;
-            border-radius: 2.5rem;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15), 0 0 0 10px #1f2937;
+            width: 100vw;
+            min-height: 100vh;
+            max-width: 100%;
+            margin: 0;
+            border-radius: 0;
+            box-shadow: none;
             overflow: hidden;
             background-color: #ffffff;
             position: relative;
             display: flex;
             flex-direction: column;
         }
-        .status-bar {
-            background-color: #ffffff;
-            color: #1f2937;
-            padding: 0.5rem 1.25rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 0.8rem;
-            font-weight: 600;
-            flex-shrink: 0;
+        /* Media query per migliorare l'aspetto su Desktop/Larghezze maggiori (opzionale) */
+        @media (min-width: 640px) {
+            body {
+                background-color: #f0f2f5; /* Sfondo grigio solo su desktop */
+                padding: 0; /* Rimosso padding per lasciare il body al 100% */
+                display: flex; /* Centra il contenitore se più piccolo del viewport */
+                align-items: center;
+                justify-content: center;
+                overflow-y: auto; /* Permette lo scroll se l'app-container è più alto */
+            }
+            .app-container {
+                max-width: 420px;
+                min-height: 90vh; /* Leggermente più piccolo del viewport per simulare un dispositivo */
+                height: auto; 
+                margin: 2rem auto;
+                border-radius: 1.5rem;
+                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 0 0 1px #e5e7eb; /* Bordo e ombra più sottili */
+            }
         }
+        
+        /* La classe .status-bar e la sua definizione sono state rimosse */
+
         .app-header {
             background-color: #f8fafc;
             flex-shrink: 0;
@@ -110,22 +129,23 @@
             padding: 0.5rem;
         }
         #notification-toast.show {
-            transform: translateY(60px); /* Sotto l'header */
+            /* Ora scende di 60px sotto il bordo superiore (quindi sotto l'header) */
+            transform: translateY(60px); 
         }
 
         /* NUOVI STILI PER IL LOGO */
         .logo-container {
             position: relative;
             display: inline-block;
-            margin-bottom: 2rem; /* Spazio sotto il logo */
-            margin-top: 1rem; /* Spazio sopra il logo */
+            margin-bottom: 2rem; 
+            margin-top: 1rem; 
         }
         .logo-new-badge {
             position: absolute;
             top: 0px;
             left: 50%;
-            transform: translate(-50%, -50%); /* Centra perfettamente, spostandolo anche sopra il bordo */
-            background-color: #d6001c; /* trenitalia-red */
+            transform: translate(-50%, -50%); 
+            background-color: #d6001c; 
             color: white;
             font-weight: 800;
             padding: 0.25rem 1rem;
@@ -136,7 +156,7 @@
         }
         .logo-text-red {
             color: #d6001c;
-            font-size: 1.1rem; /* Aumentato leggermente per visibilità */
+            font-size: 1.1rem; 
             font-weight: 800;
             line-height: 1;
         }
@@ -166,7 +186,7 @@
         }
         .platform-area {
             background-color: #e5e7eb; /* Grigio chiaro per la banchina */
-            height: 60px; /* Altezza aumentata */
+            height: 60px; 
             width: 100%;
             border-top: 1px solid #d1d5db;
             border-bottom: 1px solid #d1d5db;
@@ -209,7 +229,7 @@
             cursor: pointer;
             transition: transform 0.1s;
             z-index: 30;
-            font-size: 0.7rem; /* Dimensione del testo nel pin */
+            font-size: 0.7rem; 
         }
         .poi-pin:hover {
             transform: scale(1.1);
@@ -254,7 +274,7 @@
 
     </style>
 </head>
-<body class="p-4">
+<body>
     <div class="app-container">
         <div id="notification-toast" class="bg-white border-b border-gray-200 shadow-lg p-3 mx-4 rounded-xl flex items-start space-x-3 cursor-pointer" onclick="navigate('notifications')">
             <i data-lucide="bell" class="w-5 h-5 trenitalia-red flex-shrink-0 mt-0.5"></i>
@@ -263,15 +283,6 @@
                 <p class="text-xs text-gray-600" id="toast-message">Messaggio di notifica.</p>
             </div>
             <i data-lucide="x" class="w-4 h-4 text-gray-400 flex-shrink-0" onclick="event.stopPropagation(); hideToast();"></i>
-        </div>
-
-        <div class="status-bar">
-            <span id="time-display"></span>
-            <div class="flex items-center space-x-1">
-                <i data-lucide="signal" class="w-4 h-4"></i>
-                <span>5G</span>
-                <i data-lucide="battery-full" class="w-4 h-4"></i>
-            </div>
         </div>
 
         <header id="app-header" class="app-header p-3 flex justify-between items-center border-b border-gray-200">
@@ -484,13 +495,7 @@
              if (typeof lucide !== 'undefined') lucide.createIcons();
         }
 
-        function updateClock() {
-            const timeEl = document.getElementById('time-display');
-            if (timeEl) {
-                const now = new Date();
-                timeEl.textContent = now.toLocaleTimeString('it-IT', { hour: '2-digit', minute: '2-digit' });
-            }
-        }
+        /* Funzione updateClock rimossa */
 
         function handleBack() {
             if (appState.history.length > 1) {
@@ -990,10 +995,9 @@
             // Torna alla Home e mostra il successo
             navigate('home');
 
-            // --- INIZIO MODIFICA RICHIESTA UTENTE ---
+            // Messaggio aggiornato secondo la richiesta precedente
             const successMessage = `La tua posizione (Carrozza ${carrozza}, Posto ${posto}) è stata salvata con successo per qualsiasi emergenza.`;
             showInfoAlert(successMessage, "Posizione Salvata", "check-circle", "text-green-600");
-            // --- FINE MODIFICA RICHIESTA UTENTE ---
         }
 
         function confirmQRLocation() {
@@ -1067,9 +1071,8 @@
 
             // Inizializza l'app
             navigate('home'); // Mostra la schermata home
-            updateClock(); // Imposta l'orologio
+            // Rimosse le chiamate a updateClock e setInterval
             updateNotificationBadge(); // Aggiorna il badge notifiche
-            setInterval(updateClock, 30000); // Aggiorna l'orologio ogni 30 secondi
         });
     </script>
 </body>
